# music_scripts

./: .gitignore  array_on_grid.py  derived_fields.py  justfile  make_movie.py  pert_plot.py  plots.py  plots_old.py  prof1d.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
music_scripts/: __main__.py  array_on_grid.py  config.py  constants.py  derived_fields.py  eos.py  fgong.py  field.py  figure.py  fort_pp.py  globdiag.py  igw.py  info.py  lmax.py  lscale.py  lyon1d.py  make_movie.py  musicdata.py  pert_plot.py  plot_pendepth.py  plots.py  plots_old.py  renumber.py  restart.py  rprof.py  to_vtk.py  tseries.py
src/music_scripts/: fgong.py  lyon1d.py  restart.py
