[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "music_scripts"
version = "0.1.0"
description = "MUSIC toolshed"
authors = [{name = "Adrien Morison", email = "adrien.morison@gmail.com"}]
urls = {homepage = "https://github.com/amorison/music_scripts/"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.6",
    "f90nml>=1.4.3",
    "h5py>=3.7",
    "matplotlib>=3.6",
    "tomso>=0.2.1",
    "music_mesa_tables>=0.2",
    "music_pykg>=4.0,<4.1",
    "pymusic>=1.1.0,<2.0",
    "loam>=0.8.0,<0.9.0",
]

[project.scripts]
mutools = "music_scripts.__main__:main"

[tool.setuptools.packages.find]
include = ["music_scripts"]
namespaces = false

[tool.setuptools.package-data]
music_scripts = ["py.typed"]

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "f90nml.*",
    "h5py.*",
    "matplotlib.*",
    "mpl_toolkits.*",
    "scipy.*",
    "tomso.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
multi_line_output = 3
