[metadata]
name = music_scripts
version = 0.1.0
description = MUSIC toolshed
url = https://github.com/amorison/music_scripts/
author = Adrien Morison
author_email = adrien.morison@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
include_package_data = true
packages =
    music_scripts
install_requires =
    numpy>=1.16
    scipy>=1.0
    pandas>=1.0
    h5py>=3.0
    matplotlib>=3.0
    pymusic>=0.1.0
    loam>=0.5.0,<0.6.0

[options.entry_points]
console_scripts =
    mutools = music_scripts.__main__:main

[options.package_data]
music_scripts = py.typed
